--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="node_modules/html-to-docx/dist/html-to-docx.esm.js">My Link</a>
+    <a href="/node_modules/html-to-docx/dist/html-to-docx.esm.js">My Link2</a>
 </body>
 </html>
